k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinny
  namespace: githubshit
  labels:
    app: cinny
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cinny
  template:
    metadata:
      labels:
        app: cinny
    spec:
      containers:
        - name: cinny
          image: repo.k8s.mreow.de/githubshit/cinny:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: cinny
  namespace: githubshit
spec:
  type: ClusterIP
  selector:
    app: cinny
  ports:
    - port: 80
      targetPort: http
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinny
  namespace: githubshit
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: cinny.k8s.mreow.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cinny
                port:
                  number: 80
    - host: im.queef.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cinny
                port:
                  number: 80
  tls:
    - hosts:
        - cinny.k8s.mreow.de
      secretName: cinny-tls
    - hosts:
        - im.queef.in
      secretName: cinny-queef-in-tls
